--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="bg"></div>
 
     <div class="navigation">
-        <div><h1><a href=../pages/index.html> ПРОЕКТ-3 </a> / <a href=../pages/alternative.html> АЛЬТЕРНАТИВНАЯ ВЕРСИЯ </a> / ANOTHER HOMEWORK / ETC</h1></div>
+        <div><h1><a href=index.html> ПРОЕКТ-3 </a> / <a href=../pages/alternative.html> АЛЬТЕРНАТИВНАЯ ВЕРСИЯ </a> / ANOTHER HOMEWORK / ETC</h1></div>
     </div>
 
     <div class="about">
