--- a/pages/alternative.html
+++ b/pages/alternative.html
@@ -19,7 +19,7 @@
             <a href="https://www.linktr.ee/Manifest.msc" target="_blank"><img src="../assets/MNFST.gif" alt="MANIFEST"></a>
         </div>
         <div class="navigation">
-            <h2><a href="../pages/"><strong class="selected">[ABOUT]</strong></a> / <a href="index.html" >[PROEKT-3]</a> / <a href="wip.html">[PROEKT-4]</a> / [...]</h2>
+            <h2><a href="../pages/alternative.html"><strong class="selected">[ABOUT]</strong></a> / <a href="index.html" >[PROEKT-3]</a> / <a href="wip.html">[PROEKT-4]</a> / [...]</h2>
             <img src="../assets/GDAOlogo.svg">
         </div>
         <p>WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.WORK IN PROGRESS.</p>
