--- a/pages/wip.html
+++ b/pages/wip.html
@@ -9,7 +9,7 @@
 <body>
 
     <p>WORK IN PROGRESS...</p>
-    <p><a href=../pages/alternative.html> ПРОЕКТ-3</a></p></div>
+    <p><a href="index.html"> ПРОЕКТ-3</a></p></div>
 
 </body>
 </html>
